Refactor 08_01 and 08_02